Maven archetype for creating a new connector

--- a/.github/workflows/build-main-branches.yml
+++ b/.github/workflows/build-main-branches.yml
@@ -54,7 +54,7 @@ jobs:
                     MAVEN_OPTS: ${{ matrix.java.opts }}
                 run: |
                     mvn -s .github/ci-maven-settings.xml -Dmaven.resolver.transport=wagon -B \
-                      clean verify -Dtest-containers=true ${{ matrix.java.build_opts }}
+                      clean install -Dtest-containers=true ${{ matrix.java.build_opts }}
 
     quality:
         needs: build
