--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,7 @@
     <module>examples/rabbitmq-quickstart</module>
 
     <module>smallrye-connector-attribute-processor</module>
+    <module>smallrye-reactive-messaging-connector-archetype</module>
 
     <module>test-common</module>
     <module>tck</module>
@@ -481,6 +482,12 @@
         </plugin>
 
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-archetype-plugin</artifactId>
+          <version>3.2.1</version>
+        </plugin>
+
+        <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <executions>
@@ -776,6 +783,22 @@
             </executions>
           </plugin>
         </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>quick-build</id>
+      <activation>
+        <property>
+          <name>quickly</name>
+        </property>
+      </activation>
+      <properties>
+        <skipTests>true</skipTests>
+        <skipITs>true</skipITs>
+        <revapi.skip>true</revapi.skip>
+      </properties>
+      <build>
+        <defaultGoal>clean install</defaultGoal>
       </build>
     </profile>
   </profiles>
