--- a/examples/quickstart/pom.xml
+++ b/examples/quickstart/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.smallrye.reactive</groupId>
     <artifactId>smallrye-reactive-messaging</artifactId>
-    <version>3.13.1-SNAPSHOT</version>
+    <version>3.13.1</version>
     <relativePath>../..</relativePath>
   </parent>
 
