--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>io.smallrye.reactive</groupId>
   <artifactId>smallrye-reactive-messaging</artifactId>
-  <version>3.13.1-SNAPSHOT</version>
+  <version>3.13.1</version>
   <packaging>pom</packaging>
 
   <name>SmallRye Reactive Messaging</name>
