Channel attribute 'concurrency' for inbound channels:
Create multiple copies of the configured channel
in order to increase the processing concurrency on non-blocking processing

Each inbound connector channel would dispatch messages accordingly

--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
             - 'Channel Decorators': concepts/decorators.md
             - 'Broadcast' : concepts/broadcast.md
             - 'Merge channels' : concepts/merge.md
+            - 'Incoming Channel Concurrency' : concepts/incoming-concurrency.md
             - '@Incomings' : concepts/incomings.md
             - '@Outgoings' : concepts/outgoings.md
             - 'Testing' : concepts/testing.md
