--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
     <mockito.version>4.8.1</mockito.version>
     <junit-pioneer.version>2.2.0</junit-pioneer.version>
     <junit-platform-commons.version>1.9.3</junit-platform-commons.version>
+    <system-stubs-jupiter.version>2.1.5</system-stubs-jupiter.version>
 
     <jakarta.jms.api.version>3.1.0</jakarta.jms.api.version>
     <jackson.version>2.16.0</jackson.version>
@@ -319,6 +320,11 @@
         <artifactId>opencsv</artifactId>
         <version>${opencsv.version}</version>
       </dependency>
+      <dependency>
+        <groupId>uk.org.webcompere</groupId>
+        <artifactId>system-stubs-jupiter</artifactId>
+        <version>${system-stubs-jupiter.version}</version>
+      </dependency>
 
       <!-- OpenTelemetry libs not on BOM -->
       <dependency>
@@ -455,6 +461,11 @@
       <groupId>org.junit-pioneer</groupId>
       <artifactId>junit-pioneer</artifactId>
       <version>${junit-pioneer.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>uk.org.webcompere</groupId>
+      <artifactId>system-stubs-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -740,6 +751,25 @@
       <properties>
         <argLine>--illegal-access=permit</argLine>
       </properties>
+    </profile>
+    <profile>
+      <id>byte-buddy-experimental</id>
+      <activation>
+        <jdk>[21, )</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <systemPropertyVariables>
+                <net.bytebuddy.experimental>true</net.bytebuddy.experimental>
+              </systemPropertyVariables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>ci-tests</id>
