--- a/smallrye-connector-attribute-processor/pom.xml
+++ b/smallrye-connector-attribute-processor/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.smallrye.reactive</groupId>
     <artifactId>smallrye-reactive-messaging</artifactId>
-    <version>4.12.0-SNAPSHOT</version>
+    <version>4.12.0</version>
   </parent>
 
   <artifactId>smallrye-connector-attribute-processor</artifactId>
