Kafka Request Reply
CorrelationIdHandler
Reply partition bytes instead of string
Kafka Request Reply waitForAssignment

--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -47,6 +47,7 @@ nav:
         - 'Customizing Default Kafka Configuration': kafka/default-configuration.md
         - 'Test Companion for Kafka': kafka/test-companion.md
         - 'Kafka Transactions and Exactly-Once Processing': kafka/transactions.md
+        - 'Kafka Request/Reply': kafka/request-reply.md
 
   - AMQP 1.0:
         - amqp/amqp.md
