Add the first tests to test incoming and outgoing messaging. A lot of bug fixes and config adjustments to make it work. Start with graceful shutdown, which was needed for the tests to prevent localstack from connection loss. Well only needed for faster tests with one localstack instance. New test module to provide common aws specific logs. Except the WeldTestBase, which seems to be a duplicated multiple times.

--- a/smallrye-reactive-messaging-aws/pom.xml
+++ b/smallrye-reactive-messaging-aws/pom.xml
@@ -17,12 +17,13 @@
   <packaging>pom</packaging>
 
   <properties>
-    <awssdk.version>2.20.157</awssdk.version>
+    <awssdk.version>2.21.37</awssdk.version>
   </properties>
 
   <modules>
-    <module>smallrye-reactive-messaging-aws-sqs</module>
     <module>smallrye-reactive-messaging-aws-core</module>
+    <module>smallrye-reactive-messaging-aws-test</module>
+    <module>smallrye-reactive-messaging-aws-sqs</module>
   </modules>
 
   <dependencyManagement>
@@ -44,6 +45,15 @@
       <version>${project.version}</version>
     </dependency>
 
+
+    <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>smallrye-connector-attribute-processor</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <!-- Test config -->
     <dependency>
       <groupId>io.smallrye.config</groupId>
       <artifactId>smallrye-config</artifactId>
@@ -51,9 +61,66 @@
     </dependency>
     <dependency>
       <groupId>io.smallrye.reactive</groupId>
-      <artifactId>smallrye-connector-attribute-processor</artifactId>
+      <artifactId>test-common</artifactId>
       <version>${project.version}</version>
-      <scope>provided</scope>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.weld.se</groupId>
+      <artifactId>weld-se-shaded</artifactId>
+      <version>${weld.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.weld</groupId>
+      <artifactId>weld-core-impl</artifactId>
+      <version>${weld.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <!--    <dependency>-->
+    <!--      <groupId>software.amazon.awssdk</groupId>-->
+    <!--      <artifactId>aws-crt-client</artifactId>-->
+    <!--      <scope>test</scope>-->
+    <!--    </dependency>-->
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${testcontainers.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>localstack</artifactId>
+      <version>${testcontainers.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>jakarta.json</groupId>
+      <artifactId>jakarta.json-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.json.bind</groupId>
+      <artifactId>jakarta.json.bind-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse</groupId>
+      <artifactId>yasson</artifactId>
+      <version>${yasson.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
