Switched from log4j v1 to reload4j latest version in kafka and pulsar tests

--- a/smallrye-reactive-messaging-kafka-test-companion/pom.xml
+++ b/smallrye-reactive-messaging-kafka-test-companion/pom.xml
@@ -67,10 +67,10 @@
       <optional>true</optional>
     </dependency>
 
-    <!-- Ensure log4j1 log backend with slf4j -->
+    <!-- Ensure log4j log backend with slf4j -->
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
+      <artifactId>slf4j-reload4j</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
