--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
 
     <nats-embedded.version>2.1.1</nats-embedded.version>
     <slf4j-log4j12.version>1.7.36</slf4j-log4j12.version>
+    <slf4j-reload4j.version>2.0.9</slf4j-reload4j.version>
     <opencsv.version>5.9</opencsv.version>
     <strimzi-test-container.version>0.105.0</strimzi-test-container.version>
 
@@ -309,6 +310,11 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
         <version>${slf4j-log4j12.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-reload4j</artifactId>
+        <version>${slf4j-reload4j.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
