--- a/examples/quickstart/pom.xml
+++ b/examples/quickstart/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.smallrye.reactive</groupId>
     <artifactId>smallrye-reactive-messaging</artifactId>
-    <version>4.13.0-SNAPSHOT</version>
+    <version>4.13.0</version>
     <relativePath>../../pom.xml</relativePath>  </parent>
 
   <artifactId>reactive-messaging-quickstart</artifactId>
