--- a/smallrye-reactive-messaging-rabbitmq/pom.xml
+++ b/smallrye-reactive-messaging-rabbitmq/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.smallrye.reactive</groupId>
     <artifactId>smallrye-reactive-messaging</artifactId>
-    <version>4.14.0-SNAPSHOT</version>
+    <version>4.14.0</version>
   </parent>
 
   <artifactId>smallrye-reactive-messaging-rabbitmq</artifactId>
