--- a/smallrye-reactive-messaging-jsonb/pom.xml
+++ b/smallrye-reactive-messaging-jsonb/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>smallrye-reactive-messaging</artifactId>
     <groupId>io.smallrye.reactive</groupId>
-    <version>4.16.0-SNAPSHOT</version>
+    <version>4.16.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
