--- a/release/pom.xml
+++ b/release/pom.xml
@@ -5,7 +5,7 @@
     <parent>
       <groupId>io.smallrye.reactive</groupId>
       <artifactId>smallrye-reactive-messaging</artifactId>
-      <version>4.17.0-SNAPSHOT</version>
+      <version>4.16.2</version>
     </parent>
 
     <artifactId>smallrye-reactive-messaging-release</artifactId>
