--- a/smallrye-reactive-messaging-gcp-pubsub/pom.xml
+++ b/smallrye-reactive-messaging-gcp-pubsub/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>smallrye-reactive-messaging</artifactId>
     <groupId>io.smallrye.reactive</groupId>
-    <version>4.17.0-SNAPSHOT</version>
+    <version>4.16.2</version>
   </parent>
   <properties>
 
