--- a/test-common/pom.xml
+++ b/test-common/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.smallrye.reactive</groupId>
     <artifactId>smallrye-reactive-messaging</artifactId>
-    <version>4.17.0-SNAPSHOT</version>
+    <version>4.16.2</version>
   </parent>
 
   <artifactId>test-common</artifactId>
