--- a/documentation/pom.xml
+++ b/documentation/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.smallrye.reactive</groupId>
     <artifactId>smallrye-reactive-messaging</artifactId>
-    <version>4.17.0-SNAPSHOT</version>
+    <version>4.17.0</version>
   </parent>
 
   <artifactId>documentation</artifactId>
