--- a/smallrye-reactive-messaging-connector-archetype/pom.xml
+++ b/smallrye-reactive-messaging-connector-archetype/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.smallrye.reactive</groupId>
     <artifactId>smallrye-reactive-messaging</artifactId>
-    <version>4.17.0-SNAPSHOT</version>
+    <version>4.17.0</version>
   </parent>
 
   <artifactId>smallrye-reactive-messaging-connector-archetype</artifactId>
