--- a/.github/workflows/build-pull.yml
+++ b/.github/workflows/build-pull.yml
@@ -52,7 +52,7 @@ jobs:
                 env:
                     MAVEN_OPTS: ${{ matrix.java.opts }}
                 run: |
-                    mvn -s .github/ci-maven-settings.xml -Dmaven.resolver.transport=wagon \
+                    mvn -s .build/ci-maven-settings.xml -Dmaven.resolver.transport=wagon \
                        -B clean install -Pcoverage -Dtest-containers=true ${{ matrix.java.build_opts }}
             -   name: Codecov
                 uses: codecov/codecov-action@v1.0.13
