--- a/.github/workflows/build-main-branches.yml
+++ b/.github/workflows/build-main-branches.yml
@@ -53,7 +53,7 @@ jobs:
                 env:
                     MAVEN_OPTS: ${{ matrix.java.opts }}
                 run: |
-                    mvn -s .github/ci-maven-settings.xml -Dmaven.resolver.transport=wagon -B \
+                    mvn -s .build/ci-maven-settings.xml -Dmaven.resolver.transport=wagon -B \
                       clean install -Dtest-containers=true ${{ matrix.java.build_opts }}
 
     quality:
@@ -76,7 +76,7 @@ jobs:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                     SONAR_TOKEN: ${{ secrets.SONAR_LOGIN }}
                 run: |
-                    mvn -s .github/ci-maven-settings.xml -B \
+                    mvn -s .build/ci-maven-settings.xml -B \
                         clean install sonar:sonar -Pcoverage \
                         -Dmaven.resolver.transport=wagon \
                         -Drevapi.skip=true \
