Set Kafka telemetry logger to warn

--- a/smallrye-reactive-messaging-kafka/src/test/resources/log4j.properties
+++ b/smallrye-reactive-messaging-kafka/src/test/resources/log4j.properties
@@ -8,6 +8,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%c] - %m%n
 log4j.logger.org.apache.kafka.clients=WARN
 log4j.logger.org.apache.kafka.common.utils=WARN
 log4j.logger.org.apache.kafka.common.metrics=WARN
+log4j.logger.org.apache.kafka.common.telemetry=WARN
 log4j.logger.io.smallrye.reactive.messaging=WARN
 log4j.logger.io.smallrye.reactive.messaging.kafka=WARN
 log4j.logger.io.smallrye.reactive.messaging.kafka.companion=WARN
