--- a/.github/workflows/build-main-branches.yml
+++ b/.github/workflows/build-main-branches.yml
@@ -88,3 +88,4 @@ jobs:
                         --fail-at-end
             -   name: Codecov
                 uses: codecov/codecov-action@v1.0.13
+                if: false
