--- a/.github/workflows/build-pull.yml
+++ b/.github/workflows/build-pull.yml
@@ -56,3 +56,4 @@ jobs:
                        -B clean install -Pcoverage -Dtest-containers=true ${{ matrix.java.build_opts }}
             -   name: Codecov
                 uses: codecov/codecov-action@v1.0.13
+                if: false
