Enable setup-java maven cache instead of separate cache step
Check github-actions updates weekly

(cherry picked from commit edd2c47de9ee90d4e1b3ebec00b961db72249296)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -68,3 +68,7 @@ updates:
   - dependency-name: org.slf4j:simple
     versions:
     - "> 1.8.0"
+- package-ecosystem: "github-actions"
+  directory: "/"
+  schedule:
+      interval: "weekly"
