--- a/.github/workflows/build-podman.yml
+++ b/.github/workflows/build-podman.yml
@@ -57,17 +57,12 @@ jobs:
             -   name: Set up testcontainers for podman
                 run: |
                     echo ryuk.container.privileged=true > ~/.testcontainers.properties
-            -   uses: actions/cache@v2
-                with:
-                    path: ~/.m2/repository
-                    key: maven-${{ hashFiles('**/pom.xml') }}
-                    restore-keys: |
-                        maven-
-            -   uses: actions/checkout@v2
-            -   uses: actions/setup-java@v2
+            -   uses: actions/checkout@v4
+            -   uses: actions/setup-java@v4
                 with:
                     java-version: ${{ matrix.java.version }}
                     distribution: temurin
+                    cache: maven
             -   name: Build with Maven
                 env:
                     MAVEN_OPTS: ${{ matrix.java.opts }}
