--- a/.github/workflows/build-pull.yml
+++ b/.github/workflows/build-pull.yml
@@ -37,17 +37,12 @@ jobs:
                 ]
         name: Build with Java ${{ matrix.java.version }} ${{ matrix.java.name }}
         steps:
-            -   uses: actions/cache@v2
-                with:
-                    path: ~/.m2/repository
-                    key: maven-${{ hashFiles('**/pom.xml') }}
-                    restore-keys: |
-                        maven-
-            -   uses: actions/checkout@v2
-            -   uses: actions/setup-java@v2
+            -   uses: actions/checkout@v4
+            -   uses: actions/setup-java@v4
                 with:
                     java-version: ${{ matrix.java.version }}
                     distribution: temurin
+                    cache: maven
             -   name: Build with Maven
                 env:
                     MAVEN_OPTS: ${{ matrix.java.opts }}
