Fix release.yml to include gpg config
(cherry picked from commit ca4e5b7c33308a5ecaeb67eae27e9260e522efc4)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
             RELEASE_VERSION: ${{ github.event.inputs.version }}
             DEPLOY_WEBSITE: ${{ github.event.inputs.deployWebsite }}
             CLEAR_REVAPI: ${{ github.event.inputs.clearRevAPI }}
+            MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
             JRELEASER_TAG_NAME: ${{ github.event.inputs.version }}
             JRELEASER_PREVIOUS_TAG_NAME: ${{ github.event.inputs.previousVersion }}
             JRELEASER_GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
@@ -43,6 +44,8 @@ jobs:
                   java-version: '17'
                   distribution: 'temurin'
                   cache: maven
+                  gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+                  gpg-passphrase: 'MAVEN_GPG_PASSPHRASE'
             - name: Install just
               uses: taiki-e/install-action@just
             - name: Setup Python
