--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
 
     <jandex-maven-plugin.version>3.2.3</jandex-maven-plugin.version>
     <sundr-maven-plugin.version>0.200.0</sundr-maven-plugin.version>
+    <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
 
     <nats-embedded.version>2.1.3</nats-embedded.version>
     <slf4j-log4j12.version>2.0.16</slf4j-log4j12.version>
@@ -606,6 +607,11 @@
     </pluginManagement>
 
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>${maven-deploy-plugin.version}</version>
+      </plugin>
       <plugin>
         <groupId>io.smallrye</groupId>
         <artifactId>jandex-maven-plugin</artifactId>
