Pulsar update, added javax.rs test dependency for admin client

--- a/smallrye-reactive-messaging-pulsar/pom.xml
+++ b/smallrye-reactive-messaging-pulsar/pom.xml
@@ -48,6 +48,12 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
       <scope>test</scope>
