Add workflow_call to deploy_docs workflow to be called from another workflow

--- a/.github/workflows/push-deploy-docs.yml
+++ b/.github/workflows/push-deploy-docs.yml
@@ -3,9 +3,11 @@ run-name: Deploy ${{github.event.inputs.version || github.ref_name}} Docs
 
 on:
     workflow_dispatch:
+    workflow_call:
         inputs:
             version:
                 description: 'Release version'
+                type: string
 
 jobs:
     deploy-docs:
