--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -38,6 +38,18 @@ jobs:
                     ref: ${{ github.ref }}
                     token: ${{steps.app-token.outputs.token}}
 
+            -   name: Java setup
+                uses: actions/setup-java@v4
+                with:
+                    java-version: '21'
+                    distribution: 'temurin'
+                    cache: maven
+
+            -   name: Tools setup
+                run: |
+                    curl -s "https://get.sdkman.io" | bash
+                    source ~/.sdkman/bin/sdkman-init.sh && sdk install jbang
+
             -   name: Get GitHub App User ID
                 id: get-user-id
                 run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
