Interactive shell to enable bashrc to access tools in further steps

--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -62,6 +62,7 @@ jobs:
                     git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>'
 
             -   name: Update files
+                shell: bash -ieo pipefail {0}
                 run: |
                     echo "✅ Clear RevAPI justifications, if any"
                     jbang .build/CompatibilityUtils.java clear
