Fix push deploy docs push with git user config missing

--- a/.github/workflows/push-deploy-docs.yml
+++ b/.github/workflows/push-deploy-docs.yml
@@ -28,6 +28,7 @@ jobs:
               with:
                   ref: ${{ github.ref }}
                   token: ${{ steps.app-token.outputs.token }}
+                  fetch-depth: 0
 
             - name: Java setup
               uses: actions/setup-java@v4
