--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
 
     <jandex-maven-plugin.version>3.2.0</jandex-maven-plugin.version>
     <sundr-maven-plugin.version>0.200.0</sundr-maven-plugin.version>
+    <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
 
     <nats-embedded.version>2.1.2</nats-embedded.version>
     <slf4j-log4j12.version>2.0.13</slf4j-log4j12.version>
@@ -145,18 +146,11 @@
     <module>smallrye-reactive-messaging-gcp-pubsub</module>
     <module>smallrye-reactive-messaging-pulsar</module>
     <module>smallrye-reactive-messaging-aws-sqs</module>
-    <module>examples/quickstart</module>
-    <module>examples/kafka-quickstart</module>
-    <module>examples/kafka-quickstart-kotlin</module>
-    <module>examples/mqtt-quickstart</module>
-    <module>examples/amqp-quickstart</module>
-    <module>examples/rabbitmq-quickstart</module>
 
     <module>smallrye-connector-attribute-processor</module>
     <module>smallrye-reactive-messaging-connector-archetype</module>
 
     <module>test-common</module>
-    <module>tck</module>
   </modules>
 
   <dependencyManagement>
@@ -607,6 +601,11 @@
 
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>${maven-deploy-plugin.version}</version>
+      </plugin>
+      <plugin>
         <groupId>io.smallrye</groupId>
         <artifactId>jandex-maven-plugin</artifactId>
       </plugin>
@@ -687,38 +686,34 @@
     </plugins>
   </build>
 
-  <repositories>
-    <repository>
-      <id>sonatype-snapshots</id>
-      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>microprofile-snapshots</id>
-      <url>https://repo.eclipse.org/content/repositories/microprofile-snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
   <profiles>
     <profile>
       <id>with-camel</id>
       <activation>
-        <jdk>[17, 20]</jdk>
+        <jdk>[17,)</jdk>
       </activation>
       <modules>
         <module>smallrye-reactive-messaging-camel</module>
         <module>documentation</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>skipped-from-release</id>
+      <activation>
+        <property>
+          <name>performRelease</name>
+          <value>!true</value>
+        </property>
+      </activation>
+      <modules>
+<!--        <module>documentation</module>--> <!-- deploy skipped in module -->
+        <module>tck</module>
+        <module>examples/quickstart</module>
+        <module>examples/kafka-quickstart</module>
+        <module>examples/kafka-quickstart-kotlin</module>
+        <module>examples/mqtt-quickstart</module>
+        <module>examples/amqp-quickstart</module>
+        <module>examples/rabbitmq-quickstart</module>
       </modules>
     </profile>
     <profile>
@@ -812,7 +807,7 @@
         <activeByDefault>false</activeByDefault>
       </activation>
       <properties>
-        <excludedGroups></excludedGroups>
+        <excludedGroups />
         <groups>slow,flaky</groups>
       </properties>
     </profile>
@@ -832,7 +827,7 @@
             <executions>
               <execution>
                 <id>make-index</id>
-                <phase/>
+                <phase />
               </execution>
             </executions>
           </plugin>
