--- a/.github/workflows/push-deploy-docs.yml
+++ b/.github/workflows/push-deploy-docs.yml
@@ -1,17 +1,18 @@
-name: Deploy Docs Smallrye Reactive Messaging
+name: Deploy Docs
+run-name: Deploy ${{github.event.inputs.version || github.ref_name}} Docs
 
 on:
     workflow_dispatch:
         inputs:
             version:
                 description: 'Release version'
+                type: string
+    workflow_call:
 
 jobs:
     deploy-docs:
         runs-on: ubuntu-latest
         env:
-            GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-            RELEASE_TOKEN: ${{ secrets.RELEASE_TOKEN }}
             RELEASE_VERSION: ${{ github.event.inputs.version }}
 
         steps:
@@ -19,26 +20,35 @@ jobs:
               uses: actions/checkout@v4
               with:
                   fetch-depth: 0
-                  token: ${{ secrets.RELEASE_TOKEN }}
+
             - name: Java setup
               uses: actions/setup-java@v4
               with:
-                  java-version: '17'
+                  java-version: '21'
                   distribution: 'temurin'
                   cache: maven
+
             - name: Install just
               uses: taiki-e/install-action@just
+
             - name: Setup Python
               uses: actions/setup-python@v5
               with:
                   python-version: 3.9
                   cache: 'pipenv'
                   cache-dependency-path: documentation/Pipfile.lock
+
             - name: Install pipenv
               run: pip install pipenv
+
             - name: Set Release Version
               run: |
                 echo "RELEASE_VERSION=${RELEASE_VERSION:-"$(./mvnw help:evaluate -Dexpression=project.version -q -DforceStdout)"}" >> $GITHUB_ENV
-            - name: Perform the deploy docs
+
+            - name: Git user setup
               run: |
-                just build-ci deploy-docs
+                git config --global user.name "SmallRye CI"
+                git config --global user.email "smallrye@googlegroups.com"
+
+            - name: Perform the deploy docs
+              run: just build-ci deploy-docs ${{ env.RELEASE_VERSION }}
