--- a/.github/project.yml
+++ b/.github/project.yml
@@ -1,5 +1,5 @@
 name: SmallRye Reactive Messaging
 release:
     previous-version: 4.25.0
-    current-version: 4.26.0-RC4
+    current-version: 4.26.0
     next-version: 999-SNAPSHOT
