--- a/.github/project.yml
+++ b/.github/project.yml
@@ -1,5 +1,5 @@
 name: SmallRye Reactive Messaging
 release:
-    previous-version: 4.24.0
-    current-version: 4.24.1-RC1
+    previous-version: 4.24.1-RC1
+    current-version: 4.24.1
     next-version: 4.24.2-SNAPSHOT
